Tue May 11 11:17:25 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/Config_Handlers/Any_Handler.h:
        * DnC/Config_Handlers/Any_Handler.cpp:

          Any handler that processes schema definitions of the type <any>
          ... </any>. Currently, this handler supports only built-in
          types. Issues pertaining to specifying properties in IDL (typed)
          v/s specifying them in schema (dynamic) as an Any are being
          examined

Tue May 11 10:45:55 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL3/LexicalAnalyzer.cpp:
	* CCF/CCF/IDL3/Parser.cpp:
	* CCF/CCF/IDL3/Parser.hpp:
	* CCF/CCF/IDL3/SemanticAction/Uses.hpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/Uses.cpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/Uses.hpp:
	* CCF/CCF/IDL3/SemanticGraph/Component.cpp:
	* CCF/CCF/IDL3/SemanticGraph/Component.hpp:
	* CCF/CCF/IDL3/Traversal/Component.hpp:
	* CIDLC/ExecutorMappingGenerator.cpp:

	  Support for uses multiple.

Tue May 11 01:47:27 2004  Krishnakumar B  <kitty@nospam.invalid.domain>

        * DnC/Config_Handlers/XercesString.cpp (Config_Handler): When
          changing the function used to compare strings from
          XMLString::equals() to XMLString::compareIString(), a check on
          the return value equal to zero is needed to ensure similar
          semantics.

Tue May 11 00:18:58 2004  Krishnakumar B  <kitty@nospam.invalid.domain>

        * DnC/Config_Handlers/XercesString.cpp (Config_Handler): Changed
          the comparison function to use case-insensitive comparison, as
          case doesn't make sense while comparing XML strings.

Mon May 10 23:35:25 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/tests/Config_Handlers/Domain_Handler_Test.cpp:

          Added a new test to test the Domain Handler, which
          parses the D&C specification's DomainDescriptor.

Mon May 10 22:40:37 2004  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DnC/Config_Handlers/DnC_Dump.cpp: