@@ -1,3 +1,9 @@
+Tue May 11 12:25:39 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
+
+	* CIDLC/ExecutorMappingGenerator.cpp:
+
+	  Fixed bug in home operation emitter.
+
 Tue May 11 11:17:25 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * DnC/Config_Handlers/Any_Handler.h:
